completed appending all sections of resume and modified media queries to fix awkward text wrapping of welcome message

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h6 {
 
 h1 {
   font-size: 40px;
-  color: #02c6ed;
+  color: #33d63b;
   line-height: 48px;
   display: inline;
 }
@@ -96,20 +96,21 @@ a {
   font-style: italic;
   font-size: 18px;
   color: #f3f3f3;
-  line-height: 28px;
+  line-height: 80px;
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: #f7f952;
   display: none;
 }
 
 .orange {
-  background-color: #f5ae23;
+  background-color: #33d63b;
+  color: #4a4a4a;
 }
 
 .orange-text {
-  color: #f5ae23;
+  color: #f7f952;
 }
 
 .white-text {
@@ -152,7 +153,7 @@ ul {
 .biopic {
   float: left;
   padding: 10px;
-  width: 200px;
+  width: 100px;
   display: none;
 }
 
@@ -180,16 +181,16 @@ span {
 
 @media only screen and (max-width:900px) {
   .biopic {
-    width: 175px;
+    width: 100px;
   }
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 842px) {
   #lets-connect {
     margin-top: 10%;
   }
   .biopic {
-    width: 150px;
+    width: 75px;
   }
   .welcome-message {
     display: none;
